--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Love</title>
     <link href="src/index.css" rel="stylesheet" />
+
+    <!-- caveat font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body>
+  <body class="font-[Caveat]">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
